<resources>
    <string name="app_name">BTTV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_name">Action Movies</string>
    <string name="comedy_name">Comedy Movies</string>
    <string name="thriller_name">Thriller Movies</string>
    <string name="drama_name">Drama Movies</string>
    <string name="family_name">Family Movies</string>
    <string name="documentary_name">Documentaries</string>
    <string name="Movies">Movies</string>
    <string name="Tv">Tv Shows / Live Tv</string>
    <string name="live_tv">Live Tv</string>
    <string name="latest_tv">Latest Tv Shows</string>
    <string name="comedy_tv">Comedy Tv Shows</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="comedy_name_tv">Comedy Shows</string>
    <string name="thriller_name_tv">Thriller Shows</string>
    <string name="drama_name_tv">Drama Shows</string>
    <string name="family_name_tv">Family Shows</string>
    <string name="animation_name_tv">Animation Shows</string>
    <string name="title_activity_settings">Settings</string>

    <string name="yes_dialog">YES</string>
    <string name="no_internet">No Internet Connection, Please Connect to internet</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">First Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_link_to_register">Not a subscriber? Register now.</string>
    <string name="btn_link_to_login">I already have BTTV account</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_cid">BT CID Number</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="msg_progress_dialog">BTTV Loading...</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">address</string>
    <string name="hint_city">city</string>
    <string name="hint_state">State</string>
    <string name="hint_code">Postal Code</string>
    <string name="hint_country">Country</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re Enter Password</string>
    <string name="note"><b>Note : </b>Please make sure the above enterd details are correct. The added family member will be sent an invitation email and sms on given email id and mobile number to confirm the invitation. Once the user accepts and fill the remaining profile fields, he/she will be added to your family pack. </string>
    <string name="add_family_member">please fill following details to add family member</string>
    <string name="msg_no_connection">No Internet Connection..!</string>


    <string name="url_register">http://bflix.ignitecloud.in/JsonUserApi/register</string>
    <string name="url_change_password">http://bflix.ignitecloud.in/JsonUserApi/change_password</string>
    <string name="url_verify_otp">http://bflix.ignitecloud.in/JsonUserApi/verify_otp</string>
    <string name="url_login">http://bflix.ignitecloud.in/JsonUserApi/user_login</string>
    <!--<string name="url_login">http://bflix.ignitecloud.in/JsonLoginCheck/user_action</string>-->
    <!--<string name="url_register">http://bflix.ignitecloud.in/JsonRegister/user_action</string>-->
    <string name="url_user_profile_update">http://bflix.ignitecloud.in/JsonUserApi/profile_update</string>
    <!--<string name="url_user_update">http://bflix.ignitecloud.in/JsonUpdate/user_action</string>-->
    <string name="url_get_packages">http://bflix.ignitecloud.in/jsonApi/packages/</string>
    <string name="url_image">http://bflix.ignitecloud.in/uploads/images/</string>
    <string name="url_news">http://bflix.ignitecloud.in/jsonApi/slides/News</string>
    <string name="url_get_movie_playlists">http://bflix.ignitecloud.in/jsonApi/getplaylist2/</string>
    <string name="url_get_home_categories">http://bflix.ignitecloud.in/web_api/get_home_categories.php</string>
    <string name="url_get_videos">http://bflix.ignitecloud.in/jsonApi/vod/</string>
    <string name="url_drawer_categories">http://bflix.ignitecloud.in/jsonApi/categories</string>
    <string name="url_audio">http://bflix.ignitecloud.in/jsonApi/aod</string>
    <string name="url_watch_later">http://bflix.ignitecloud.in/web_api/get_watch_later.php</string>
    <string name="url_get_favorite">http://bflix.ignitecloud.in/web_api/get_favorites.php</string>
    <string name="url_genres">http://bflix.ignitecloud.in/jsonApi/genres/</string>
    <string name="get_live_tv_channel">http://bflix.ignitecloud.in/jsonApi/channels/Video/</string>
    <string name="url_userpackages">http://bflix.ignitecloud.in/jsonApi/userpackages1/</string>
    <string name="url_terms_conditios">http://bflix.ignitecloud.in/apppages/terms</string>
    <string name="url_privacy_policy">http://bflix.ignitecloud.in/apppages/privacy</string>
    <string name="url_get_radios">http://bflix.ignitecloud.in/jsonApi/radio</string>
    <string name="url_base_image">http://bflix.ignitecloud.in/uploads/images/</string>
    <string name="url_get_video">http://bflix.ignitecloud.in/jsonApi/getvod/</string>
    <string name="url_add_favorite">http://bflix.ignitecloud.in/jsonApi/addtofav1/</string>
    <string name="url_create_playlist">http://bflix.ignitecloud.in/jsonApi/createPlaylist/</string>
    <string name="url_add_to_playlist">http://bflix.ignitecloud.in/jsonApi/savetoplaylist/</string>
    <string name="url_add_to_watchlist">http://bflix.ignitecloud.in/jsonApi/addtoWatchlist/</string>
    <string name="url_get_playlist_content">http://bflix.ignitecloud.in/jsonApi/playlist/</string>
    <string name="url_get_tv_channels">http://bflix.ignitecloud.in/jsonApi/getchannel/</string>
    <string name="saveresume">http://bflix.ignitecloud.in/jsonApi/saveresume/</string>
    <string name="cid_number">CID Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="submit">Submit</string>

</resources>
