<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:padding="5dp"
            android:text="Your Profile"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@mipmap/ic_account_circle_black_24dp" />


            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_last_name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/mobilenumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_mobile"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/cidnumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_cid"
                android:inputType="number"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_address"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/et_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_city"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/ed_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_state"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/ed_postal_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_code"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/ed_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint_country"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />

            <!-- Login Button -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/sign_up_bg"
                        android:text="Update"
                        android:textColor="#fff" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/login_bg"
                        android:onClick="reset"
                        android:text="Reset"
                        android:textColor="#fff" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlack"
                android:gravity="center"
                android:padding="5dp"
                android:text="Change Password"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/current_password"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/new_password"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_re_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/re_enter_new_password"
                android:maxLength="11"
                android:padding="10dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/btnChange"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dip"
                android:background="@drawable/sign_up_bg"
                android:text="Change"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>